--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,8 @@
     <!-- difficulty -->
     <span id="speed-container">
       <label>Speed</label>
-      <input type="range" id="speed" min="1" max="3" name="name" value="" list="speeds">
+      <input type="range" id="speed" min="1" max="3" name="name" value="">
     </span>
-    <datalist id="speeds">
-      <option value="1">slow</option>
-      <option value="2">normal</option>
-      <option value="3">fast</option>
-    </datalist>
     <!-- step count display-->
     <span id="counter">
       <sup>Count</sup>
@@ -40,7 +35,7 @@
     </div>
   </fieldset>
   <div id="game-button-container">
-    <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg" style="transform: rotate(-90deg)">
+    <svg width="300" height="300" viewBox="300 300 300 300" xmlns="http://www.w3.org/2000/svg" style="transform: rotate(-90deg)">
       <path id="button0" d="M 25 25
       A 275 275, 0, 0, 1, 275 275
       M 25 25
